loading bug strikes back?

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Are the Academy out of touch?</h1>
         <div class="para">Every year the Academy Awards roll around, and people talk about how the Academy voters are out of touch with the general cinema-going population. Accusations that they are only interested in giving ‘oscarbait’ films the Best Picture Oscar are abound. But how true is that?</div>
         <h2>Consensus through the decades</h2>
-        <div class="para">I have taken data from two film aggregate sites (RottenTomatoes and MetaCritic) and extracted each of their Critic Scores and User Scores for every film nominated for Best Picture in the last 40 years. The following visualisation displays how often the Best Picture winner was also the highest rated film by each group over the years.</div>
+        <div class="para">I have taken data from two film aggregate sites (RottenTomatoes and MetaCritic) and extracted each of their Critic Scores and User Scores for every film nominated for Best Picture in the last 40 years. The following visualisation displays the difference in how often the Best Picture winner was also the highest rated film by each group over the years.</div>
         
         <div id="my_dataviz"></div>
         <h3>Critic versus Audience Consensus</h3>
