--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+<meta http-equiv="cache-control" content="no-cache">
 <html>
     <head>
         <title>Oscar Charts</title>
         <link rel="stylesheet" href="styles.css"></link>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Hahmlet:wght@200&family=Limelight&display=swap">
+        <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100&family=Limelight&family=Nova+Round&display=swap" rel="stylesheet">
         <script src="https://d3js.org/d3.v7.min.js" defer></script>
         <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
     </head>
@@ -11,17 +12,17 @@
         <h1>Are the Academy out of touch?</h1>
         <div class="para">Every year the Academy Awards roll around, and people talk about how the Academy voters are out of touch with the general cinema-going population. Accusations that they are only interested in giving ‘oscarbait’ films the Best Picture Oscar are abound. But how true is that?</div>
         <h2>Consensus through the decades</h2>
-        <div class="para">I have taken data from two film aggregate sites (RottenTomatoes and MetaCritic) and extracted each of their Critic Scores and User Scores for every film nominated for Best Picture in the last 40 years. The following visualisation displays the difference in how often the Best Picture winner was also the highest rated film by each group over the years.</div>
+        <div class="para">I have taken data from two film aggregate sites (RottenTomatoes and MetaCritic) and extracted each of their Critic Scores and User Scores for every film nominated for Best Picture in the last 40 years. The following visualisation displays how many times per decade each group’s highest rated film for a year also won the Best Picture Oscar.</div>
         
         <div id="my_dataviz"></div>
         <h3>Critic versus Audience Consensus</h3>
-        <div id=flexbox>
-            <div class="para">The following visualisation displays the rating of each Best Picture Nominee from 1990-2020 as ranked by Metacritic’s Metascore (represented as critics on the chart) and User Score (represented as audience on the chart). You can use the appropriate buttons on the right to see how opinions differ between the two groups across the years. Please note some films receive the same rating, so appear on top of each other, for a more accurate listing of nominees by year click on the corresponding vertical grey box.</div>
-            <div id="empty"></div>
-            <div id="button_container">
-                <button id="Critic">Critic</button><button id="Audience">Audience</button>
+            <div id=flexbox>
+                <div class="para">The following visualisation displays the rating of each Best Picture Nominee from 1990-2020 as ranked by Metacritic’s aggregated Critic and Audience scores. You can switch between the two group’s ratings by using the buttons on the right, and can explore the films nominated each year by clicking the vertical grey boxes. </div>
+                <div id="empty">In 2009 the Academy changed the rules around the Best Picture award, increasing the number of nominees to ten and introducing a modified version of instant runoff voting, a change which some suggested would allow more generic films to win.</div>
+                <div id="button_container">
+                    <button id="Critic">Critic</button><button id="Audience">Audience</button>
+                </div>
             </div>
-        </div>
         
         <div id="my_dataviz2"></div>        
         <script src="index.js" defer></script>
