--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <h1>Are the Academy out of touch?</h1>
         <div class="para">Every year the Academy Awards roll around, and people talk about how the Academy voters are out of touch with the general cinema-going population. Accusations that they are only interested in giving ‘oscarbait’ films the Best Picture Oscar are abound. But how true is that?</div>
         <h2>Consensus through the decades</h2>
-        <div class="para">I have taken data from two film aggregate sites (RottenTomatoes and MetaCritic) and extracted each of their Critic Scores and User Scores for every film nominated for Best Picture in the last 40 years. The following visualisation displays how many times per decade each group’s highest rated film for a year also won the Best Picture Oscar.</div>
+        <div class="para">I have taken data from the aggregated site MetaCritic, and compared their Critical (Metascore) and Audience (User Score) ratings for every film nominated for Best Picture in the last 40 years. The following visualisation displays how often either group’s highest rated film for a year also won the Best Picture Oscar.</div>
         
         <div id="my_dataviz"></div>
         <h3>Critic versus Audience Consensus</h3>
             <div id=flexbox>
-                <div class="para">The following visualisation displays the rating of each Best Picture Nominee from 1990-2020 as ranked by Metacritic’s aggregated Critic and Audience scores. You can switch between the two group’s ratings by using the buttons on the right, and can explore the films nominated each year by clicking the vertical grey boxes. </div>
+                <div class="para">The following visualisation displays the rating of each Best Picture Nominee from 1996-2020 using the same data from the previous visualisation. You can switch between the two group’s ratings by using the buttons on the right, and can explore the films nominated each year by clicking the vertical grey boxes.</div>
                 <div id="empty">In 2009 the Academy changed the rules around the Best Picture award, increasing the number of nominees to ten and introducing a modified version of instant runoff voting, a change which some suggested would allow more generic films to win.</div>
                 <div id="button_container">
                     <button id="Critic">Critic</button><button id="Audience">Audience</button>
