--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Are the Academy out of touch?</h1>
         <div class="para">Every year the Academy Awards roll around, and people talk about how the Academy voters are out of touch with the general cinema-going population. Accusations that they are only interested in giving ‘oscarbait’ films the Best Picture Oscar are abound. But how true is that?</div>
         <h2>Consensus through the decades</h2>
-        <div class="para">I have taken data from the aggregate review site MetaCritic, and compared their Critical (Metascore) and Audience (User Score) ratings for every film nominated for Best Picture in the last 40 years. The following visualisation displays how many times by decade a group’s highest rated film for a given year also won the Best Picture Oscar.</div>
+        <div class="para">I have taken data from the aggregate review site MetaCritic, and compared their Critical (Metascore) and Audience (User Score) ratings for every film nominated for Best Picture in the last 40 years. The following visualisation displays how many times by decade a critic's or audience's highest rated film for a given year also won the Best Picture Oscar.</div>
         
         <div id="my_dataviz"></div>
         <h3>Critic versus Audience Consensus</h3>
