--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <h1>Are the Academy out of touch?</h1>
         <div class="para">Every year the Academy Awards roll around, and people talk about how the Academy voters are out of touch with the general cinema-going population. Accusations that they are only interested in giving ‘oscarbait’ films the Best Picture Oscar are abound. But how true is that?</div>
         <h2>Consensus through the decades</h2>
-        <div class="para">I have taken data from the aggregate review site MetaCritic, and compared their Metascore (a weighted average of the ratings given by a curated list of critics) and User Score (an average of user submitted ratings) for every film nominated for Best Picture in the last 40 years. The following visualisation displays how many times per decade a critic's or audience's highest rated film for a given year also won the Best Picture Oscar.</div>
+        <div class="para">I have taken data from the aggregate review site MetaCritic, and compared their Metascore (a weighted average of the ratings given by a curated list of critics) and User Score (an average of user submitted ratings) for every film nominated for Best Picture since 1996. The following visualisation displays how many times per five year period a critic's or audience's highest rated film for a given year also won the Best Picture Oscar.</div>
         
         <div id="my_dataviz"></div>
         <h3>Critic versus Audience Consensus</h3>
-        <div class="para">The following visualisation takes a more in depth look at a subset of the data used in the first visualisation. It displays the aggregate rating from both groups for each Best Picture Nominee for the years 1996-2021. You can switch between the critical and audience ratings by clicking the buttons on the right, and can view the specific films nominated each year and their ranking relative to each other by clicking the corresponding vertical grey boxes. </div>
+        <div class="para">The following visualisation takes a more in depth look at the data used in the first visualisation. It displays the aggregate rating from both groups for each Best Picture Nominee for the years 1996-2021. You can switch between the critical and audience ratings by clicking the buttons on the right, and can view the specific films nominated each year and their ranking relative to each other by clicking the corresponding vertical grey boxes. </div>
             <div id=flexbox>
                 <div class="para"></div>
                 <div id="empty">In 2009 the Academy changed the rules around the Best Picture award, increasing the number of nominees to ten and introducing a modified version of instant runoff voting, a change which some suggested would allow more generic films to win.</div>
@@ -25,7 +25,8 @@
                 </div>
             </div>
         
-        <div id="my_dataviz2"></div>        
+        <div id="my_dataviz2"></div>    
+        <div id="my_dataviz3"></div>    
         <script src="index.js" defer></script>
     </body>
 </html>
