--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <body>
         <h1>Are the Academy out of touch?</h1>
         <div class="para">Every year the Academy Awards roll around, and people talk about how the Academy voters are out of touch with the general cinema-going population. Accusations that they are only interested in giving ‘oscarbait’ films the Best Picture Oscar are abound. But how true is that?</div>
-        <h2>Consensus through the decades</h2>
-        <div class="para">I have taken data from the aggregate review site MetaCritic, and compared their Metascore (a weighted average of the ratings given by a curated list of critics) and User Score (an average of user submitted ratings) for every film nominated for Best Picture since 1996. The following visualisation displays how many times per five year period a critic's or audience's highest rated film for a given year also won the Best Picture Oscar.</div>
-        
+        <h2>How often are Critic's and Audience's choice reflected in Best Picture winner?</h2>
+        <div class="para">I have taken data from the aggregate review site MetaCritic, and compared their Metascore (a weighted average of the ratings given by a curated list of critics) and User Score (an average of user submitted ratings) for every film nominated for Best Picture since 1996. The following visualisation tracks how often either group's highest rated Best Picture nominee went on to win the Academy Award.</div>
+        <div class="note">Note: The figures displayed on this chart are inclusive only of the period concerned. There were occasions prior to 1996 where both group's highest rated Best Picture Nominee went on to win the Award.</div>
         <div id="my_dataviz"></div>
         <h3>Critic versus Audience Consensus</h3>
-        <div class="para">The following visualisation takes a more in depth look at the data used in the first visualisation. It displays the aggregate rating from both groups for each Best Picture Nominee for the years 1996-2021. You can switch between the critical and audience ratings by clicking the buttons on the right, and can view the specific films nominated each year and their ranking relative to each other by clicking the corresponding vertical grey boxes. </div>
+        <div class="para">The following visualisation takes a more in depth look at the data used in the first visualisation. It displays the aggregate rating from both groups for each Best Picture Nominee for the years 1996-2021. You can switch between the critical and audience ratings by clicking the buttons on the right, and can view a ranked list of films nominated each year by clicking the corresponding vertical grey boxes on the chart. </div>
             <div id=flexbox>
                 <div class="para"></div>
                 <div id="empty">In 2009 the Academy changed the rules around the Best Picture award, increasing the number of nominees to ten and introducing a modified version of instant runoff voting, a change which some suggested would allow more generic films to win.</div>
